--- a/templates/htmx_form.html
+++ b/templates/htmx_form.html
@@ -1,1 +1,6 @@
+<script>
+    var el = document.querySelector("a[href*='static/uploads']");
+    el.setAttribute("hx-boost","false");
+</script>
+
 [[=form]]
