--- a/templates/htmx_grid_demo.html
+++ b/templates/htmx_grid_demo.html
@@ -3,7 +3,7 @@
 
 <h5>#htmx-grid-demo</h5> 
 <div id="htmx-grid-demo" hx-boost="true" hx-target="#htmx-grid-demo">
-    <div hx-get="[[=URL('htmx_grid')]]" hx-trigger="load" hx-target="#htmx-grid-demo"></div>
+    <div hx-get="[[=URL('htmx_grid')]]" hx-trigger="load" hx-target="#htmx-grid-demo" hx-push-url="true"></div>
 </div>
 
 <script src="https://unpkg.com/htmx.org@1.3.2"></script>
